Revision history for Perl distribution Win32-SharedFileOpen

4.03 Development

    - Reformatted Changes file as per CPAN::Changes::Spec.

    - Made Perl Critic, Pod and Pod Coverage tests skip unless AUTHOR_TESTING.

    - Added optional POD coverage testing.

    - Added optional Perl::Critic testing.

    - Made code Perl::Critic clean.

    - Simplified and corrected Makefile.PL requirements.

4.02 2014-05-30

    - Simplified repository metadata for cleaner appearance on search.cpan.org.

4.01 2014-05-19

    - Changed all time() calls to Time::HiRes::time() calls to improve accuracy
      and (hopefully) to fix occasional test failures in t/12_variables.t.

4.00 2014-05-16

    - Fixed occasional test failures in t/10_fsopen_fh_leak.t and
      t/11_sopen_fh_leak.t by avoiding the problem of trying to open a file with
      a pending delete.  Also avoided similar possible test failures in
      t/06_fsopen_access.t, t/07_sopen_access.t and t/12_variables.pod.

    - Added support for the 'R', 'S', 'T' and 'D' characters in the mode string
      argument to fsopen().  These were added to the Microsoft C library
      function _fsopen() in Visual Studio 2012 (VC11), but we can support them
      regardless of which compiler is being used (except for Borland C++) since
      we are emulating the function now.

    - The functionality to automatically retry opening a file if it could not be
      opened due to a sharing violation now works for perls built with the
      Borland C++ compiler as a result of now emulating the _fsopen() and
      _sopen() functions.  The known bug in various t\06_fsopen_access.t tests
      failing with Borland C++ is also resolved by the same change.

    - Rewrote most of the XS code to emulate, rather than directly expose, the
      Microsoft C library functions _fsopen() and _sopen().

      This has been done using the Win32 API function CreateFile() and Perl's